--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Metawood - Designed By Burair Abbas</title>
+    <title>Metawood</title>
     <link rel="icon" href="#" type="image/gif" sizes="16x16" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -81,19 +81,19 @@
                   <!-- mainmenu begin -->
                   <ul id="mainmenu">
                     <li>
-                      <a href="/">Home<span></span></a>
+                      <a href="index.html">Home<span></span></a>
                     </li>
                     <li>
-                      <a href="#">About<span></span></a>
+                      <a href="metaverse.html">Metaverse<span></span></a>
                     </li>
                     <li>
-                      <a href="#">Partners<span></span></a>
+                      <a href="#section-about">About<span></span></a>
                     </li>
                     <li>
-                      <a href="#">NFTS<span></span></a>
+                      <a href="#partners">Partners<span></span></a>
                     </li>
                     <li>
-                      <a href="#">Security & Transparency<span></span></a>
+                      <a href="#section-collections">NFTS<span></span></a>
                     </li>
                   </ul>
                   <!-- mainmenu close -->
@@ -133,19 +133,18 @@
                   </h6>
                   <div class="spacer-10"></div>
                   <h1 class="wow fadeInUp" data-wow-delay=".75s">
-                    Create, sell and collect digital items.
+                    Welcome to the world of Bollywood NFTs.
                   </h1>
                   <p class="wow fadeInUp lead" data-wow-delay="1s">
-                    Unit of data stored on a digital ledger, called a
-                    blockchain, that certifies a digital asset to be unique and
-                    therefore not interchangeable
+                    Explore, buy, and sell exceptional NFTs.Digital arts are trends now. Log in now, explore a world never seen before and privately and securely own digital items
+                    never seen before!
                   </p>
                   <div class="spacer-10"></div>
                   <a
                     href="#"
                     class="btn-main wow fadeInUp lead"
                     data-wow-delay="1.25s"
-                    >Get in Touch</a
+                    >Explore</a
                   >
                   <div class="row">
                     <div class="spacer-single"></div>
@@ -246,7 +245,7 @@
 
         <!-- About section begin -->
         <section
-          id="section-hero"
+          id="section-about"
           aria-label="section"
           class="pt20 pb20 vh-100"
           data-bgimage="url(images/background/8.jpg) bottom"
@@ -274,18 +273,23 @@
                     Create, sell and collect digital items.
                   </h1>
                   <p class="wow fadeInUp lead" data-wow-delay="1s">
-                    Unit of data stored on a digital ledger, called a
-                    blockchain, that certifies a digital asset to be unique and
-                    therefore not interchangeable
+                    Welcome to an exciting, digital marketplace for crypto collectibles and non-fungible tokens
+                    (NFTs). Buy, sell, and discover exclusive digital items ranging from content about celebrities,
+                    their art forms, stories and personal lives.
                   </p>
                   <div class="spacer-10"></div>
                   <div class="row">
                     <p class="wow fadeInUp lead" data-wow-delay="1s">
-                      Unit of data stored on a digital ledger, called a
-                      blockchain, that certifies a digital asset to be unique
-                      and therefore not interchangeable
+                      Log in now, explore a world never seen before and privately and securely own digital items
+                      never seen before!
                     </p>
                   </div>
+                  <!-- <div class="row">
+                    <p class="wow fadeInUp lead" data-wow-delay="1s">
+                      Click on Explore for a demo about what Non Fungible Tokens are and how to get on board in this
+                      exciting, reality transcending Journey
+                    </p>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -293,7 +297,7 @@
         </section>
 
         <!-- section begin -->
-        <section id="section-collections" class="pt30 pb30">
+        <section id="section-collections" class="pt30 pb30 nft">
           <div class="container">
             <div class="row wow fadeIn">
               <div class="col-lg-12">
@@ -351,21 +355,21 @@
                       </div>
                       <a href="#">
                         <img
-                          src="images/items-alt/static-1.jpg"
+                          src="images/items-alt/tang.jfif"
                           class="lazy nft__item_preview"
                           alt=""
                         />
                       </a>
                     </div>
-                    <div class="nft__item_info">
+                    <div class="nft__item_info mt-sm-3">
                       <a href="#">
-                        <h4>Sunny Day</h4>
+                        <h4>Story behind the famous Welcome scene</h4>
                       </a>
                       <div class="nft__item_click">
                         <span></span>
                       </div>
                       <div class="nft__item_price">
-                        0.08 ETH<span>1/20</span>
+                        0.08 ETH<span>$7000</span>
                       </div>
                       <div class="nft__item_action">
                         <a href="#">Place a bid</a>
@@ -423,7 +427,7 @@
                       </div>
                       <a href="#">
                         <img
-                          src="images/items-alt/static-2.jpg"
+                          src="images/items-alt/soja-zara.jpg"
                           class="lazy nft__item_preview"
                           alt=""
                         />
@@ -431,13 +435,13 @@
                     </div>
                     <div class="nft__item_info">
                       <a href="#">
-                        <h4>Blue Planet</h4>
+                        <h4>The art of making a song by Madhushree Bhattacharya</h4>
                       </a>
                       <div class="nft__item_click">
                         <span></span>
                       </div>
                       <div class="nft__item_price">
-                        0.06 ETH<span>1/22</span>
+                        0.06 ETH<span>$8000</span>
                       </div>
                       <div class="nft__item_action">
                         <a href="#">Place a bid</a>
@@ -498,7 +502,7 @@
                       </div>
                       <a href="#">
                         <img
-                          src="images/items-alt/static-3.jpg"
+                          src="images/items-alt/remo-dance.jpg"
                           class="lazy nft__item_preview"
                           alt=""
                         />
@@ -506,13 +510,13 @@
                     </div>
                     <div class="nft__item_info">
                       <a href="#">
-                        <h4>Finally Free</h4>
+                        <h4>"How i become a Dancer" by Remo-D-Souza</h4>
                       </a>
                       <div class="nft__item_click">
                         <span></span>
                       </div>
                       <div class="nft__item_price">
-                        0.05 ETH<span>1/11</span>
+                        0.05 ETH<span>$6000</span>
                       </div>
                       <div class="nft__item_action">
                         <a href="#">Place a bid</a>
@@ -570,7 +574,7 @@
                       </div>
                       <a href="#">
                         <img
-                          src="images/items-alt/static-4.jpg"
+                          src="images/items-alt/cop-verse.jpg"
                           class="lazy nft__item_preview"
                           alt=""
                         />
@@ -578,13 +582,13 @@
                     </div>
                     <div class="nft__item_info">
                       <a href="#">
-                        <h4>Work From Home</h4>
+                        <h4>Story and exclusive info behind the cop universe</h4>
                       </a>
                       <div class="nft__item_click">
                         <span></span>
                       </div>
                       <div class="nft__item_price">
-                        0.02 ETH<span>1/15</span>
+                        0.02 ETH<span>$5000</span>
                       </div>
                       <div class="nft__item_action">
                         <a href="#">Place a bid</a>
@@ -904,7 +908,7 @@
 
             <!-- partners -->
 
-            <div class="row wow fadeIn">
+            <div id="partners" class="row wow fadeIn">
               <div class="col-lg-12">
                 <h2 class="style-2">Partners</h2>
               </div>
@@ -990,7 +994,7 @@
                       <div class="nft__item_extra"></div>
                       <a href="3">
                         <img
-                          src="images/items-alt/essense.jfif"
+                          src="images/items-alt/rohit-shetty.jpg"
                           class="lazy nft__item_preview"
                           alt=""
                         />
@@ -998,12 +1002,10 @@
                     </div>
                     <div class="nft__item_info">
                       <a href="#">
-                        <h4 class="text-center">Essense Transmedia pvt ltd.</h4>
+                        <h4 class="text-center">Rohit Shetty</h4>
                       </a>
                       <p class="text-center">
-                        Essense Transmedia pvt ltd is a media company based in
-                        mumbai and has been in the media business for over a
-                        decade.
+                        Rohit Shetty is an Indian film director, producer and television host who is working in Hindi cinema for a decade.
                       </p>
                     </div>
                   </div>
@@ -1194,8 +1196,7 @@
                   <div class="text">
                     <h4 class="wow fadeInUp">Security</h4>
                     <p class="wow fadeInUp" data-wow-delay=".25s">
-                      Sed ut perspiciatis unde omnis iste natus error sit
-                      voluptatem accusantium doloremque laudantium, totam rem.
+                       All our nfts are backed by a smart contract that ensures the security of your nfts. security is our #1 priority.
                     </p>
                   </div>
                   <i class="wm icofont-ssl-security"></i>
@@ -1209,8 +1210,7 @@
                   <div class="text">
                     <h4 class="wow fadeInUp">Transparency</h4>
                     <p class="wow fadeInUp" data-wow-delay=".25s">
-                      Sed ut perspiciatis unde omnis iste natus error sit
-                      voluptatem accusantium doloremque laudantium, totam rem.
+                     Transparency is our priority. We are open to suggestions and feedback. We are always looking to improve our platform.
                     </p>
                   </div>
                   <i class="wm icofont-check-alt"></i>
