--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <section
           id="section-about"
           aria-label="section"
-          class="pt20 pb20 vh-100"
+          class="pt20 pb20 about vh-100"
           data-bgimage="url(images/background/8.jpg) bottom"
         >
           <div id="particles-js"></div>
