--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div class="d-item">
                   <div class="nft__item style-2">
                     <div
-                      class="de_style text-center"
+                      class="de_style1 text-center"
                     >Sold</div>
                     <div class="author_list_pp">
                       <a
