--- a/metaverse.html
+++ b/metaverse.html
@@ -108,7 +108,7 @@
       class="pt20 pb20 vh-100"
       data-bgimage="url(images/background/8.jpg) bottom"
     >
-      <div id="particles-js2"></div>
+      <div id="particles-js"></div>
       <div class="v-center">
         <div class="container">
           <div class="row align-items-center">
