--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
                     Create, sell and collect digital items.
                   </h1>
                   <p class="wow fadeInUp lead" data-wow-delay="1s">
-                    Welcome to an exciting, digital marketplace for crypto collectibles and non-fungible tokens
-                    (NFTs). Buy, sell, and discover exclusive digital items ranging from content about celebrities,
+                    Reality is reality but virtual reality is now a reality too. Buy, sell, and discover exclusive digital items ranging from content about celebrities,
                     their art forms, stories and personal lives.
                   </p>
                   <div class="spacer-10"></div>
@@ -453,7 +452,7 @@
                   </div>
                 </div>
                 <!-- nft item begin -->
-                <div class="d-item">
+                <!-- <div class="d-item">
                   <div class="nft__item style-2">
                     <div
                       class="de_style text-center"
@@ -526,7 +525,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- nft item begin -->
                 <div class="d-item">
                   <div class="nft__item style-2">
@@ -964,7 +963,7 @@
                   </div>
                 </div>
                 <!-- nft item begin -->
-                <div class="">
+                <!-- <div class="">
                   <div class="nft__item style-2">
                     <div class="nft__item_wrap">
                       <div class="nft__item_extra"></div>
@@ -986,7 +985,7 @@
                       </p>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <!-- nft item begin -->
                 <div class="">
                   <div class="nft__item style-2">
